--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "supabase-github-auth",
+  "name": "sowa_landing_page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@supabase/supabase-js": "^1.22.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
